--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,11 +39,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.authentification"
-        minSdkVersion 16
+        applicationId "com.tmam.authentification"
+        minSdkVersion 20
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
