--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,23 +18,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  custom_radio_grouped_button: any
+  custom_radio_grouped_button: ^2.1.1
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  firebase_auth: ^0.18.4+1
-  flutter_signin_button: ^1.0.0
-  firebase_core: ^0.5.3
-  google_sign_in: ^4.5.9
+  cupertino_icons: ^1.0.4
+  firebase_auth: ^3.2.0
+  flutter_signin_button: ^2.0.0
+  firebase_core: ^1.10.0
+  cloud_firestore: ^2.5.0
+  firebase_storage: ^10.0.1
+  google_sign_in: ^5.2.1
+  connectivity: ^3.0.6
+  provider: ^5.0.0
+  top_snackbar_flutter: ^1.0.1
 
 dev_dependencies:
   flutter_test:
