--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,5 +62,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation "androidx.multidex:multidex:2.0.1"
 }
