--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   firebase_storage: ^10.0.1
   google_sign_in: ^5.2.1
   connectivity: ^3.0.6
-  provider: ^5.0.0
+  provider: ^6.0.1
   top_snackbar_flutter: ^1.0.1
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_test:
