--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.1
   top_snackbar_flutter: ^1.0.1
   shared_preferences: ^2.0.9
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
